--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-
+    <article>
+      <h1>Intense Mint Dark Chocolate</h1>
+      <h2>85% Cocoa</h2>
+      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+      <a href="#">Buy Now</a>
+      <img class="img-flex" src="images/placeholder-4by3.svg" alt="images">
+    </article>
   </body>
 </html>
