Styled 1440px media query.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
   <section>
     <div>
-      <h1>Intense Mint Dark Chocolate</h1>
-      <h2>85% Cocoa</h2>
-      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
-      <a href="#">Buy now</a>
+      <div class="wrapper">
+        <h1>Intense Mint Dark Chocolate</h1>
+        <h2>85% Cocoa</h2>
+        <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+        <a href="#">Buy now</a>
+      </div>
     </div>
     <img class="img-flex" src="images/placeholder-4by3.svg" alt="images">
   </section>
